--- a/RefitRestMethods/RefitRestMethods.csproj
+++ b/RefitRestMethods/RefitRestMethods.csproj
@@ -4,11 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>RefitMethods</RootNamespace>
     <PackageId>RefitRestMethodsPackage</PackageId>
-    <Version>1.0.2</Version>
+    <Version>1.0.4</Version>
     <Authors>Antonio Fabrizio Fiume - Alessio Rivoli</Authors>
     <Product>RefitRestMethods</Product>
     <Description>Il pacchetto sarà utilizzato per semplificare l'utilizzo dei metodi http (PUT, POST, GET, DELETE) attraverso la libreria REFIT</Description>
     <AssemblyName>RefitMethods</AssemblyName>
+    <PackageProjectUrl></PackageProjectUrl>
+    <RepositoryUrl>https://github.com/FabriGinseng/RestMethodsRefit</RepositoryUrl>
+    <PackageTags>refit; rest; api; post; put;delete;get;</PackageTags>
+    <Copyright>Antonio Fabrizio Fiume - Alessio Rivoli</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
